docker-compose/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/django-pg-docker-tutorial-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - args:
            - sh
            - -c
            - python manage.py migrate && python manage.py runserver 0.0.0.0:3003
          image: app
          name: app
          ports:
            - containerPort: 3003
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: app-claim0
      restartPolicy: Always
      volumes:
        - name: app-claim0
          persistentVolumeClaim:
            claimName: app-claim0
status: {}
