docker-compose/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
