docker-compose/templates/django-pg-docker-tutorial-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: django-pg-docker-tutorial-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/django-pg-docker-tutorial-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/django-pg-docker-tutorial-default: "true"
